Made a few changes for the mobile filterbox. Still need to make it fullscreend with the body overflow set to hidden to prevent scrolling

--- a/assets/styles/products-page/products-page.css
+++ b/assets/styles/products-page/products-page.css
@@ -106,10 +106,14 @@
   
   /* Poducts Results Sorting */
   .prod-Results-Header .form-select{
-    width: 75%;
+    width: 100%;
     font-size: 16px;
     padding: 0 2em 0  0 ;
     color: rgb(0, 0, 0);
+    height: 40px;
+    border: black 2px solid;
+    border-radius: 10px;
+    font-weight: 500;
   }
   .prod-Results-Header .sort-Menu{
     font-size: 17px;
@@ -123,6 +127,11 @@
   }
   .prod-Results-Header .sort-Menu-Title{
     padding-right: .5em;
+  }
+  .form-select:focus {
+    /* border-color: #86b7fe;
+    outline: 0; */
+    box-shadow: none;
   }
   
   
@@ -446,6 +455,12 @@
       padding-right: 1em;
       /* display: flex; */
     }
+    .mobile-Hide--Filterbox{
+      display: none;
+    }
+    .products-Section .filter-box.hide-Filter--Box {
+      display: block;
+    }
   }
   
   
@@ -457,5 +472,12 @@
       text-align: center;
       line-height: 20px;
     } */
+
+    .prod-Results-Header .hide-Filters .form-check {
+      padding-left: 0em;
+    }
+    .prod-Results-Header .collection-Name {
+      padding-right: 5px;
+    }
   }
   
